Fix grid on mobile

--- a/app/assets/styles/project-styles/modules/cards.scss
+++ b/app/assets/styles/project-styles/modules/cards.scss
@@ -7,9 +7,11 @@
 		align-items: center;
 		flex-direction: column;
 		gap: 2rem;
+		padding-left: vars.$gutter-padding;
+		padding-right: vars.$gutter-padding;
 		@include vars.break(tablet){
 			display: grid;
-			grid-template-columns: repeat(auto-fit, minmax(250px, 350px));
+			grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
 			gap: $gridGap;
 		}
 		&__card{
@@ -52,11 +54,10 @@
 	&__header{
 		margin-top: .4em;
 		margin-bottom: .4em;
-		display: inline-flex;
-		gap: .1em;
-		align-items: baseline;
 		a{
 			@extend %text-heading;
+			gap: .1em;
+			align-items: baseline;
 			&::after{
 				content: '';
 				position: absolute;
@@ -67,8 +68,9 @@
 			}
 		}
 		svg{
-			width: 16px;
-			height: 16px;
+			height: .7em;
+			width: auto;
+			padding-left: .2em;
 		}
 	}
 	&__content{
